--- a/sass/index.html
+++ b/sass/index.html
@@ -351,10 +351,10 @@
                     E aí, o básico de SASS é isso aí.
                 </h1>
                 <p>
-                    Você pode ver a <a style="color:#000" href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html">documentação completa aqui</a>.
+                    Você pode ver a <a style="color:#000" href="https://sass-lang.com/documentation/file.SASS_REFERENCE.html" target="_blank">documentação completa aqui</a>.
                 </p>
                 <p>
-                    <a href="#" style="text-decoration:none"><button class="btn-bounce-r">E baixar uma estrutura básica aqui.</button></a>
+                    <a href="assets/project.zip" style="text-decoration:none" target="_blank"><button class="btn-bounce-r">E baixar uma estrutura básica aqui.</button></a>
                 </p>
             </div>
             <div class="image">
