Correção sobre compilado

--- a/sass/index.html
+++ b/sass/index.html
@@ -254,9 +254,11 @@
                 <code><span>....</span>padding: 0</code>
                 <code>}<span>...</span></code>
                 <code><span>....</span></code>
-                <code>header li</code>
+                <code>header li {</code>
                 <code><span>....</span>display: inline-block</code>
                 <code><span>....</span>padding: 20px</code>
+                <code>}<span>...</span></code>
+                <code><span>....</span></code>
             </div>
             <p>
                 Mas não para por aí, você ainda pode aninhar fazendo coisas como:
