Realizado Correções Pontuais

--- a/poo/index.html
+++ b/poo/index.html
@@ -29,7 +29,7 @@
                     Óh, <b>modelos</b> são representações simplificadas de objetos, pessoas, items, tarefas, processos, conceitos, ideias, etc. São utilizados comumente por pessoas, independente da programação de computadores.
                 </p>
                 <p>
-                    Um exemplo de modelo poderia ser um daqueles papeizinhos onde o garçon anota seu pedido.
+                    Um exemplo de modelo poderia ser um daqueles papeizinhos onde o garçom anota seu pedido.
                 </p>
             </div>
             <div class="image">
@@ -49,7 +49,7 @@
                     Bom, podemos entender Classe como a representação dos modelos que criamos no nosso dia-a-dia.
                 </p>
                 <p>
-                    Ela é uma estrutura que abstrai um conjunto de <b>objetos</b> com características similares . Uma classe define o comportamento de seus objetos através de <b>métodos</b>, e os estados possíveis destes objetos através de <b>atributos</b>.
+                    Ela é uma estrutura que abstrai um conjunto de <b>objetos</b> com características similares. Uma classe define o comportamento de seus objetos através de <b>métodos</b>, e os estados possíveis destes objetos através de <b>atributos</b>.
                 </p>
                 <p>
                     Para entender o que é <b>atributo</b> e o que é método, imagine que você quisesse abstrair um carro. Todo carro tem cor, modelo, marca, tipo de combustível, tipo ou tamanho das rodas, potência, velocidade máxima, velocidade atual, enfim... esses são os nossos <b>atributos</b> para uma <b>classe</b> carro.
@@ -71,7 +71,7 @@
                     Aaah, êis a questão!
                 </p>
                 <p>
-                    Basicamente, você vai querer utilizar POO em aplicações onde seja necessário representar conjuntos de dados dependentes ou interligados entre si (ex: datas, registros de alunos, contas bancárias, etc). Similarmente, qualquer aplicação onde seja necessário aplicar um conjunto de rotinas específicas a um conjunto de dados.
+                    Basicamente, você vai querer utilizar POO em aplicações onde seja necessário representar conjuntos de dados dependentes ou interligados entre si (ex: datas, registros de alunos, contas bancárias, etc). Similarmente, qualquer aplicação onde seja necessário empregar um conjunto de rotinas específicas a um conjunto de dados.
                 </p>
                 <p>
                     Algumas vantagens de programar com orientação a objetos:
@@ -117,7 +117,7 @@
                 <code><span>........</span>}</code>
                 <code><span>.</code>
                 <code><span>........</span>//Método da classe</code>
-                <code><span>........</span>public static function seyHello($name) {</code>
+                <code><span>........</span>public static function sayHello($name) {</code>
                 <code><span>............</span>echo 'Olá, '.$name;</code>
                 <code><span>........</span>}</code>
                 <code><span>....</span>}</code>
