Corrige erro de escrita

--- a/mysql/index.html
+++ b/mysql/index.html
@@ -153,13 +153,13 @@
         <section class="green">
             <h1>E como que eu crio essas tabelas aí?</h1>
             <p>
-                As tabelas e todas as outras coisas podem ser criadas por meio de código MySQL. Contudo, iremos utilizar uma ferramenta visual unificada para arquitetos de banco de dados e desenvolvedores, chamada Mysql Workbanch. O que o Workbanch vai fazer é permitir que você "desenhe" suas tabelas e relacionamentos com "clique e arraste", e depois transformará tudo em código.
+                As tabelas e todas as outras coisas podem ser criadas por meio de código MySQL. Contudo, iremos utilizar uma ferramenta visual unificada para arquitetos de banco de dados e desenvolvedores, chamada Mysql Workbench. O que o Workbench vai fazer é permitir que você "desenhe" suas tabelas e relacionamentos com "clique e arraste", e depois transformará tudo em código.
             </p>
             <div class="code-block">
                 <code>$sudo apt-get install mysql-workbench</code>
             </div>
             <p>
-                Estando o Workbanch instalado, abra-o e tecle <b>ctrl + N</b>.
+                Estando o Workbench instalado, abra-o e tecle <b>ctrl + N</b>.
             </p>
             <p>
                 Abaixo segue um vídeo onde modelamos um banco de dados conforme sugerido pela explicação das relações 1 pra n e n pra n.
