Finaliza primeira parte - CRUD

--- a/crud/index.html
+++ b/crud/index.html
@@ -150,6 +150,12 @@
                 Podemos ser mais específicos da mesma forma que vimos no SELECT.
             </p>
         </section>
+        <section>
+            <h1>Daí que...</h1>
+            <h3>Você poderia estar se perguntando como integrar isso ao seu sistema.</h3>
+            <h3>Pois é. Como?</h3>
+            <p>Você já ouviu falar em MVC?</p>
+        </section>
 
         <section class="blue center">
             <div class="text">
