Adiciona definição de Model, View e Controller

--- a/mvc/index.html
+++ b/mvc/index.html
@@ -37,10 +37,11 @@
                 </p>
                 <h3>CONTROLLER</h3>
                 <p>
+                    A controller é a camada de negócios; as regras de negócio são definidas principalmente nos controladores e nos relacionamentos entre as tabelas do banco de dados, assim como as validações de formulários, logins, redirecionamentos, etc. As controllers, ora essa, controlam a aplicação, e costumamos dizer que elas funcionam como uma ponte entre a view e a model.
                 </p>
                 <h3>MODEL</h3>
                 <p>
-
+                    A model é a camada que vai interagir com o Banco de Dados. É nela que vamos aplicar o conhecimento que obtivemos no <a href="https://infojrufba.github.io/g/crud/">guia de CRUD</a>. Na model a gente vai lançar as inserções, requisições, atualizações, deleções, desde as declaroções mais básicas até as declarações mais complexas, usando PHP & MySQL.
                 </p>
             </div>
         </section>
