--- a/crud/index.html
+++ b/crud/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="assets/css/manualTrainee.css">
         <link rel="icon" type="image/png" href="assets/img/infojr-ico.svg">
-        <title>Guias - MySQL</title>
+        <title>Guias - CRUD</title>
     </head>
     <body>
         <section class="center full dark-blue">
