Corrigindo referência para o próximo guia

--- a/mysql/index.html
+++ b/mysql/index.html
@@ -255,7 +255,7 @@
                     Você pode ver a <a style="color:#000" href="https://dev.mysql.com/doc/refman/5.5/en/" target="_blank">documentação completa do MySQL aqui</a>.
                 </p>
                 <p>
-                    A sequência desse guia é o guia de <a href="https://infojrufba.github.io/g/poo/">POO (1)</a>. Você já ouviu falar nisso?
+                    A sequência desse guia é o guia de <a href="https://infojrufba.github.io/g/crud/">CRUD</a>. Você já ouviu falar nisso?
                 </p>
             </div>
             <div class="image">
